syntax = "proto3";

package api.datalakeingestion.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/wyfcoding/ecommerce/goapi/datalakeingestion/v1;datalakeingestionv1";

// 数据湖摄取服务，负责将各类异构数据源的原始数据流式或批量导入数据湖。
service DataLakeIngestionService {
  // 执行数据摄取操作。
  rpc IngestToDataLake(IngestToDataLakeRequest) returns (google.protobuf.Empty);
}

// 摄取请求。
message IngestToDataLakeRequest {
  // 源系统标识。
  string data_source = 1;
  // 负载编码格式 (JSON, PARQUET, AVRO)。
  string data_format = 2;
  // 原始字节数据。
  bytes data_content = 3;
  // 业务元数据描述。
  map<string, string> metadata = 4;
}
